--- a/1.2-Serviços-principais.md
+++ b/1.2-Serviços-principais.md
@@ -41,4 +41,4 @@ Executa código sem precisar provisionar ou gerenciar servidores (Serverless).
 - **Amazon CloudFront** – CDN para distribuição de conteúdo
 - **Amazon DynamoDB** – Banco NoSQL gerenciado
 - **Amazon VPC** – Redes virtuais privadas
-- **AWS Elastic Beanstalk** – Plataforma para aplicações web
+- **AWS Elastic Beanstalk** – Plataforma para aplicações web.
