--- a/1.1-introdução-a-AWS.md
+++ b/1.1-introdução-a-AWS.md
@@ -36,5 +36,5 @@ Computação em nuvem é a entrega sob demanda de recursos de TI pela internet c
 
 ---
 
-> 💡 *Este resumo é apenas o começo. Consulte a [Documentação Oficial da AWS](https://docs.aws.amazon.com/pt_br/index.html) para aprofundar seus estudos.*
+> 💡 *Este resumo é apenas o começo. Consulte a [Documentação Oficial da AWS](https://docs.aws.amazon.com/pt_br/indexhtml) para aprofundar seus estudos.*
 
